fixed all HTML errors, edited style on navbar and footer, made the entire site responsive - still having image ssizing problems on mobile version

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 .navbar {
     background-color: rgb(22, 23, 32);
     height: 10vh;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,6 +13,7 @@
     color: rgb(154, 46, 36);
     height: 15vh;
     width: 45vw;
+    padding: 1%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -41,7 +41,7 @@
 
 .bio-photos {
     margin-top: 2.5%;
-    /* width: 83vw; */
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,6 +50,7 @@
 
 .photos {
     border: 2px;
+    width: 80vw;
 }
 
 .bio {
@@ -65,6 +66,12 @@
 
 footer {
     width: 100vw;
+    height: 10vh;
+}
+
+main {
+    width: 100vw;
+    height: 100vh;
 }
 
 .site-build {
@@ -84,6 +91,7 @@ footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 100vw;
     background-color: rgb(22, 23, 32);
 }
 
@@ -115,13 +123,14 @@ body {
 
 .connect {
     background-color: rgb(22, 23, 32);
+    font-size: 24px;
     display: flex;
     justify-content: center;
-    align-content: center;
-    font-size: 24px;
+    align-items: center;
     color: rgb(154, 46, 36);
     font-weight: bold;
     margin-top: 2.5%;
+    width: 100%;
 }
 
 .photos {
